--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,18 +10,18 @@
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,700;0,900;1,600&display=swap" rel="stylesheet"> 
-	<link rel="stylesheet" href="../static/style_contact.css">
-	<link rel="icon" href="../static/Images/logo.png">
+	<link rel="stylesheet" href="static/style_contact.css">
+	<link rel="icon" href="static/Images/logo.png">
 
 </head>
 <!--Change the href links to pages-->
 <body>
 	<div id="test">
 		<header>
-			<a href="index"><div id="logo"><img src="../static/Images/logo.png"></div></a>
+			<a href="/"><div id="logo"><img src="static/Images/logo.png"></div></a>
 				<nav>  
 					<ul>
-						<li><a href="index">Home</a>
+						<li><a href="/">Home</a>
 						<li><a href="exercises">Exercises</a>
 						<li><a href="generator">Generator</a>
 						<li><a href="create">Create</a>
@@ -42,11 +42,11 @@
 	<div id="top">
 		<h1>CONTACT.</h1>
 		<h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
-		<div class="sideImage"><img src="../static/Images/undraw_team_spirit_hrr4(2).png"></div>
+		<div class="sideImage"><img src="static/Images/undraw_team_spirit_hrr4(2).png"></div>
 	</div>
 
 	<div class="contactinfo">
-		<img src="../static/Images/email_logo.png">
+		<img src="static/Images/email_logo.png">
 		<h3>name@email.com</h3>
 	</div>
 	
