--- a/templates/exercises.html
+++ b/templates/exercises.html
@@ -10,7 +10,7 @@
 
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,700;0,900;1,600&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="../static/style_exercises.css">
+        <link rel="stylesheet" href="static/style_exercises.css">
         <link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Archivo:700&display=swap" rel="stylesheet">
         <link rel="icon" href="Images/logo.png">
@@ -20,10 +20,10 @@
     <body>
         <div id="test">
             <header>
-                <a href="index"><div id="logo"><img src="../static/Images/logo.png"></div></a>
+                <a href="/"><div id="logo"><img src="static/Images/logo.png"></div></a>
                     <nav>  
                         <ul>
-                            <li><a href="index">Home</a>
+                            <li><a href="/">Home</a>
                             <li>Exercises
                             <li><a href="generator">Generator</a>
                             <li><a href="create">Create</a>
