--- a/templates/who_are_we.html
+++ b/templates/who_are_we.html
@@ -10,18 +10,18 @@
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,700;0,900;1,600&display=swap" rel="stylesheet"> 
-	<link rel="stylesheet" href="../static/style_who_are_we.css">
-	<link rel="icon" href="../static/Images/logo.png">
+	<link rel="stylesheet" href="static/style_who_are_we.css">
+	<link rel="icon" href="static/Images/logo.png">
 
 </head>
 <!--Change the href links to pages-->
 <body>
 	<div id="test">
 		<header>
-			<a href="/"><div id="logo"><img src="../static/Images/logo.png"></div></a>
+			<a href="/"><div id="logo"><img src="static/Images/logo.png"></div></a>
 				<nav>  
 					<ul>
-						<li><a href="index">Home</a>
+						<li><a href="/">Home</a>
 						<li><a href="exercises">Exercises</a>
 						<li><a href="generator">Generator</a>
 						<li><a href="create">Create</a>
@@ -42,46 +42,46 @@
 	<div id="top">
 		<h1>WHO ARE WE?</h1>
 		<h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
-		<div class="sideImage"><img src="../static/Images/undraw_team_spirit_hrr4(2).png"></div>
+		<div class="sideImage"><img src="static/Images/undraw_team_spirit_hrr4(2).png"></div>
 	</div>
 
 	<div class="card">
-		<div class="profilepic"><img src="../static/Images/logo.png"></div>
+		<div class="profilepic"><img src="static/Images/logo.png"></div>
 		<h1>John Doe</h1>
 		<h2>His role.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
-		<div class="linkedin"><img src="../static/Images/logo_linkedin.png"></div>
-		<div class="github"><img src="../static/Images/logo_github.png"></div>
+		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
+		<div class="github"><img src="static/Images/logo_github.png"></div>
 		
 	</div>
 
 	<div class="card">
-		<div class="profilepic"><img src="../static/Images/logo.png"></div>
+		<div class="profilepic"><img src="static/Images/logo.png"></div>
 		<h1>John Doe</h1>
 		<h2>His role.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
-		<div class="linkedin"><img src="../static/Images/logo_linkedin.png"></div>
-		<div class="github"><img src="../static/Images/logo_github.png"></div>
+		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
+		<div class="github"><img src="static/Images/logo_github.png"></div>
 		
 	</div>
 
 	<div class="card">
-		<div class="profilepic"><img src="../static/Images/logo.png"></div>
+		<div class="profilepic"><img src="static/Images/logo.png"></div>
 		<h1>John Doe</h1>
 		<h2>His role.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
-		<div class="linkedin"><img src="../static/Images/logo_linkedin.png"></div>
-		<div class="github"><img src="../static/Images/logo_github.png"></div>
+		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
+		<div class="github"><img src="static/Images/logo_github.png"></div>
 		
 	</div>
 
 	<div class="card">
-		<div class="profilepic"><img src="../static/Images/logo.png"></div>
+		<div class="profilepic"><img src="static/Images/logo.png"></div>
 		<h1>Vincent Lefeuve</h1>
 		<h2>Web dev.</h2>
 		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
-		<div class="linkedin"><img src="../static/Images/logo_linkedin.png"></div>
-		<div class="github"><img src="../static/Images/logo_github.png"></div>
+		<div class="linkedin"><img src="static/Images/logo_linkedin.png"></div>
+		<div class="github"><img src="static/Images/logo_github.png"></div>
 		
 	</div>
 	
